🗑️: Removed a way to buy supercharges

--- a/browser.html
+++ b/browser.html
@@ -16,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask! Question Browser" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask-bot.gq/Images/AskLogo200x200.png" />
+	<meta property="og:image" content="https://ask.dantenl.com/Images/AskLogo200x200.png" />
 	<meta property="og:description"
 		content="View all asked questions here!" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
@@ -36,7 +36,7 @@
 	<!-- End Google Tag Manager (noscript) -->
 	<div class="question-preview">
 		<h1 class="big gradient-text">Ask! Question Browser</h1>
-		<h2>View every asked question! If you're interested in Supercharging a question, click <a href="https://ask-bot.gq/supercharges/" target="_blank" rel="noopener noreferrer">here</a>!</h2>
+		<h2>View every asked question!</h2>
 		
 		<div class="question-grid" id="answers">
 		</div>
